# Petroleum-Batchtrack-System

./: .gitignore  Accounts and Mails.txt  DEPLOYMENT.md  README.md  direct_test.py  docker-compose.yml  endpoint_test.py  freeze_test.py  login_test.py  physics_test.py  pipeline_tracker.db  reproduce_login_error.py  simple_test.py  test_admin.py  test_history.py  test_login_endpoint.py  test_receiving_logic.py  token.json  verify_admin_ui.py  verify_fix.py  viz_test.py
backend/: .dockerignore  .env.production.example  .gitignore  Dockerfile  clear_db.py  init_db.py  main.py  passenger_wsgi.py  pyproject.toml  reproduce_issue.py  requirements.txt  update_db.py
backend/app/: auth.py  config.py  crud.py  database.py  main.py  models.py  schemas.py  utils.py
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: .htaccess
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: AdminPanel.tsx  BatchLog.tsx  CreateBatchForm.tsx  Dashboard.tsx  EditBatchModal.tsx  FlowEntryForm.tsx  GainLoss.tsx  HistoryPane.tsx  LiveBatchesPane.tsx  Login.tsx  PipelineVisualization.tsx  ReceiveProductModal.tsx  ReceivingOperations.tsx  ShelvedBatchesList.tsx  StatusModal.tsx
frontend/src/context/: PipelineContext.tsx
frontend/src/services/: api.ts
frontend/src/store/: auth.ts
